// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section common component renders correctly, 1 test 1`] = `
<View
  bgColor="transparent"
  borderColor={null}
  borderRadius={0}
  centerContentHorizontally={false}
  centerContentVertically={false}
  clientBottom={0}
  clientLeft={8}
  clientRight={8}
  clientTop={0}
  flexStartContentHorizontally={false}
  fluid={true}
  offsetBottom={0}
  offsetLeft={0}
  offsetRight={0}
  offsetTop={0}
  stretchContent={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 0,
      },
      Object {},
    ]
  }
>
  <View>
    <Text>
      TEST
    </Text>
  </View>
</View>
`;

exports[`Section common component renders correctly, 2 test 1`] = `
<View
  bgColor="transparent"
  borderColor={null}
  borderRadius={0}
  centerContentHorizontally={false}
  centerContentVertically={true}
  clientBottom={0}
  clientLeft={0}
  clientRight={0}
  clientTop={0}
  flexStartContentHorizontally={false}
  fluid={false}
  offsetBottom={0}
  offsetLeft={0}
  offsetRight={0}
  offsetTop={0}
  stretchContent={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "flexDirection": "column",
        "justifyContent": "center",
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      },
      Object {},
    ]
  }
>
  <View>
    <Text>
      TEST
    </Text>
  </View>
</View>
`;

exports[`Section common component renders correctly, 3 test 1`] = `
<View
  bgColor="transparent"
  borderColor={null}
  borderRadius={22}
  centerContentHorizontally={false}
  centerContentVertically={false}
  clientBottom={0}
  clientLeft={0}
  clientRight={0}
  clientTop={0}
  flexStartContentHorizontally={false}
  fluid={true}
  offsetBottom={0}
  offsetLeft={0}
  offsetRight={0}
  offsetTop={0}
  stretchContent={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderRadius": 22,
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      },
      Object {},
    ]
  }
>
  <View>
    <Text>
      TEST
    </Text>
  </View>
</View>
`;
